pkg/provider/kubernetes/ingress/fixtures/Ingress-with-nil-endpointslice-port-name.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-with-nil-endpointslice-port-name
  namespace: default

spec:
  rules:
  - host: whoami.localhost
    http:
      paths:
      - path: /
        backend:
          service:
            name: whoami-nil-port-name
            port:
              number: 80
        pathType: Prefix

---
kind: Service
apiVersion: v1
metadata:
  name: whoami-nil-port-name
  namespace: default

spec:
  ports:
    - name: web
      port: 80
  clusterIP: 10.0.0.1

---
kind: EndpointSlice
apiVersion: discovery.k8s.io/v1
metadata:
  name: whoami-nil-port-name-abc
  namespace: default
  labels:
    kubernetes.io/service-name: whoami-nil-port-name

addressType: IPv4
ports:
  - port: 80
endpoints:
  - addresses:
      - 10.10.0.1
    conditions:
      ready: true
